--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+#.env
 .venv
 env/
 venv/
@@ -129,3 +129,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# log
+apprun.log
+log.log
+
+#idea
+.idea
